2005-07-18  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Fixed bug which prevented frame from being correctly set when
	  creating new NPCs.
	* objs/objs.cc: Fixed bug while editing objects contained by other objects.
	* mapedit/objedit.cc, npcedit.cc: Added support for dragging shapes >1024.
	* All other files: Added support for extended editing of container objects
	  (i.e., editing resistance, 'invisible' and 'okay_to_take' flags).

2005-07-17    <jeff@mini.nerble.net>

	* combat.cc: Improvements to weapon-readying so that monsters are
	better-equipped. 

2005-07-17  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc: Fixed small bug with dont_move flag in BG.
	* intrinsics.cc: Allowed bg_dont_move flag to work like SI's dont_move flag
	  when it is toggled (i.e., take Avatar out of combat mode). Also allowed
	  invisible flag to be set for all objects.
	* objs.cc: Fixed small bug which prevented detection of invisible objects
	  with find_nearby using mask 0x20.

2005-07-16  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Fixed crash when there was no attacker.
	* intrinsics.cc: Fixed real cause of the super-cannon bug -- LOOP opcode
	  should not loop if the variable hasn't been initialized (verified in the
	  original, but with the add-ons only).
	* objs.cc, effects.cc: Undid one change in each which became unnecessary now
	  that the real cause of the super-cannon bug has been found. Also, slightly
	  tweaked Projectile_effect for the benefit of traps.

2005-07-15    <jeff@mini.nerble.net>

	* usecode/ucinternal.cc: Added support for indirect calls.
	Example:
	var fun = fun1;
	(*fun)(3);
	fun = fun + 1;
	(*fun)(17);

2005-07-15  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Fixed bug I introduced in which dueling NPCs would slaughter
	  each other and then attack the avatar.
	* objs.cc, objs.h: Fixed bug I introduced about container hit points.