@@ -1,3 +1,8 @@
+2005-07-24    <jeff@mini.nerble.net>
+
+	* actors.cc,drag.cc:  Call readies/unreadied usecode in more
+	places so that SI special items (belt-of-strength, etc.) work properly.
+
 2005-07-18  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* actors.cc: Fixed bug which prevented frame from being correctly set when
 	  creating new NPCs.
